modift addBearerAuth for swagger document builder, implement paymentApi by using client sdk of api-payment generated by openapi
